<resources>
    <string name="app_name">Messenger</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--    Heading of each fragment-->
    <string name="heading_chat">Đoạn chat</string>

    <string name="start_calling">Bắt đầu gọi</string>
    <string name="content_des">Ảnh</string>
    <string name="search">Tìm kiếm</string>
    <string name="add_friend">Kết bạn</string>
    <string name="chat">Nhắn tin</string>

    <string name="enable_p2p_button">P2P On/Off</string>
    <string name="discover_peers_button">Discover</string>
    <string name="connect_peer_button">Connect</string>
    <string name="disconnect_peer_button">Disconnect</string>
    <string name="get_file_button">Launch Gallery</string>
    <string name="empty"></string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="client_text">This device will act as a client. Click on Gallery button to pick a local(stored) file</string>
    <string name="empty_message">No devices found. Turn on P2P and perform discovery from the Action Bar</string>
    <string name="p2p_off_warning">Enable P2P from action bar button above or system settings</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="label_me">ME</string>
    <string name="label_peers">PEERS</string>

    <!-- Buttons -->
    <string name="go_to_settings_button">Go to Settings</string>
    <string name="send_button">Send</string>
    <string name="back_button">Back</string>
    <string name="record_button">Start recording</string>
    <string name="playback_button">Play</string>
    <string name="stop_recording_button">Stop recording</string>
    <string name="ok">OK</string>

    <!-- Descriptions -->
    <string name="full_screen_image">Full screen image</string>
    <string name="file_icon">File icon</string>
    <string name="paint">Choose a color</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>

    <string name="title_activity_view_image">View image</string>
</resources>